Added resume auction feature

--- a/admin.html
+++ b/admin.html
@@ -760,6 +760,8 @@ async function markUnsold(auto = false) {
 /* ---------------------------
    INITIAL LOAD 
 --------------------------- */
+loadTeams();
+
 loadPlayers();
 loadAllPlayersForSearch();
 
